src/objects/TIP_Pay_Prov_Prod_Country_Config__c.object
<CustomObject>
    <fields>
        <fullName>Network_Fee__c</fullName>
        <inlineHelpText>Network fee per country</inlineHelpText>
        <label>Network Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_BSP_Code__c</fullName>
        <formula>TIP_BSP_Country__r.BSP_Country_free_text__c</formula>
        <label>BSP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_BSP_Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>BSP Country</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>IATA_ISO_Country__c.ISO_Code__c</field>
                <operation>equals</operation>
                <valueField>IATA_ISO_Country__c.BSP_Country_free_text__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>Payment Product Country Configs</relationshipLabel>
        <relationshipName>TIP_Payment_Product_Country_Configs</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIP_Effective_From_Date_To_Show__c</fullName>
        <formula>IF(ISNULL(TIP_Effective_From_Date__c ),   TIP_Product__r.PP_Effective_from_Date__c , TIP_Effective_From_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective From Date To Show</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIP_Effective_From_Date__c</fullName>
        <label>Effective From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIP_Effective_To_Date__c</fullName>
        <label>Effective To Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TIP_Interchange_Fee__c</fullName>
        <description>Interchange fee(s) per country</description>
        <label>Interchange Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_Issuing_Currency__c</fullName>
        <description>Payments Country Configuration Issuing currency for integration purposes</description>
        <label>Issuing Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP_Product__c</fullName>
        <label>TIP Product</label>
        <referenceTo>Partner_products__c</referenceTo>
        <relationshipLabel>Payment Product Country Configs</relationshipLabel>
        <relationshipName>Payment_Product_Country_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TIP_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACTIVE</fullName>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>INACTIVE</fullName>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>IN_PROGRESS</fullName>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>DRAFT</fullName>
                    <label>Draft</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment Product Country Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCC-{0000000000}</displayFormat>
        <label>Payment Product Country Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Product Country Configs</pluralLabel>
    <recordTypes>
        <fullName>TIP_Payment_Product_Country_Config</fullName>
        <active>true</active>
        <label>TIP Payment Product Country Config</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Check_if_product_is_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   NOT(ISPICKVAL(TIP_Product__r.PP_Status__c, &quot;Active&quot;)),
   ISPICKVAL(TIP_Status__c, &quot;Active&quot;)
)</errorConditionFormula>
        <errorMessage>Payment Product Country Config cannot be activated if related Product is not active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_from_before_effective_To</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TIP_Product__r.Provider__r.RecordType.DeveloperName = &quot;TIP_Payment_Provider&quot;, TIP_Effective_From_Date__c &gt; TIP_Effective_To_Date__c )</errorConditionFormula>
        <errorMessage>Effective to Date needs to be greater than effective from Date</errorMessage>
    </validationRules>
</CustomObject>